@@ -35,7 +35,7 @@ Adapter classes
   PACKAGE_SIGNING_INFO_UNAVAILABLE
   EXECUTION_WITHHELD_INSTALLER
 - Route strictness:
-  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header structure, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). Strict mode also rejects partial ZIP/AR metadata even when required package markers are present. `.msi` strict mode requires valid CFB header structure fields, `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset, `.pkg` strict mode requires minimally valid XAR header fields, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512). Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
+  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header structure, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). Strict mode also rejects partial ZIP/AR metadata even when required package markers are present. `.msi` strict mode requires valid CFB header structure fields, `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset, `.pkg` strict mode requires minimally valid XAR header fields and a minimum structural file size, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512) plus a minimum structural file size. Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
 
 3) extension
 - Formats: .crx, .vsix, .xpi, unpacked extension folder with manifest.json
